--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,10 @@
 main#app-root{
   height: 100vh;
   width: 100vw;
+  padding: 0;
+  margin: 0;
   overflow-y: scroll;
+  color:rgb(5, 167, 5);
 }
 
 header, section, footer{
@@ -42,7 +45,8 @@ section#app-content{
 }
 
 footer#app-footer{
-  background:rgb(59, 59, 59);
+  /* background:rgb(59, 59, 59); */
+  background:rgb(255, 255, 255);
   padding: 5px 0;
   position: fixed;
   bottom: 0;
